Refine profiles modal

--- a/css/main.css
+++ b/css/main.css
@@ -621,6 +621,8 @@ tbody:before {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-height: 90vh;
+  overflow-y: auto;
 }
 
 .profile-item {
