--- a/css/main.css
+++ b/css/main.css
@@ -705,6 +705,9 @@ tbody:before {
   margin-top: 20px;
   padding: 10px 0;
   border-top: 1px solid #ddd;
+  position: sticky;
+  bottom: 0;
+  background: #fff;
 }
 
 .button-container .btn {
@@ -716,6 +719,9 @@ tbody:before {
   margin-top: 20px;
   padding: 10px 0;
   border-top: 1px solid #ddd;
+  position: sticky;
+  bottom: 0;
+  background: #fff;
 }
 
 .modal .btn.close {
@@ -768,7 +774,7 @@ ul li:hover .hide {
   display: flex;
   flex-direction: column;
   max-height: 90vh;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 #submit-delete, #submit-rename {
