Allow modal form to scroll

--- a/css/main.css
+++ b/css/main.css
@@ -703,8 +703,6 @@ tbody:before {
 .button-container {
   text-align: center;
   margin-top: 20px;
-  padding: 10px 0;
-  border-top: 1px solid #ddd;
 }
 
 .button-container .btn {
@@ -714,8 +712,6 @@ tbody:before {
 .btn-container {
   text-align: center;
   margin-top: 20px;
-  padding: 10px 0;
-  border-top: 1px solid #ddd;
 }
 
 .modal .btn.close {
@@ -768,7 +764,7 @@ ul li:hover .hide {
   display: flex;
   flex-direction: column;
   max-height: 90vh;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 #submit-delete, #submit-rename {
