Move Save button to modal footer

--- a/css/main.css
+++ b/css/main.css
@@ -765,10 +765,8 @@ ul li:hover .hide {
 }
 
 #profiles_form {
-  display: flex;
-  flex-direction: column;
   max-height: 90vh;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 #submit-delete, #submit-rename {
